# Lagrange-Interpolationer

./: .gitignore  AdditionTest.c  CMakeLists.txt  FactorSequence.c  FractionAddition.c  FractionAddition.h  FractionSimplifier.c  FractionSimplifier.h  LineBase.c  LineBase.h  LinearSequence.c  LinearSequence.h  PolyCalc.c  PolyCalc.h  PolyTest.c  PreFunc.c  PreFunc.h  PreFuncTest.c  PrintFactorResult.c  PrintFactorResult.h  README.md  generateSequenceTest.c  main.c
Graphic/: Configurations.h  Main.cpp
Output/: LatexStyleOutput.c  LatexStyleOutput.h  PrintFactorResult.c  PrintFactorResult.h
SingleValue/: AdditionTest.c  FactorSequence.c  FactorSequence.h  FractionAddition.c  FractionAddition.h  FractionSimplifier.c  LineBase.c  LineBase.h  LinearSequence.c  LinearSequence.h  PolyCalc.c  PolyTest.c  PreFunc.c  PreFunc.h  SingleValue.c  SingleValue.h  builtin.c  builtin.h  generateSequenceTest.c  main.c
